--- a/Sports/assets/css/template.css
+++ b/Sports/assets/css/template.css
@@ -47,8 +47,109 @@ nav .active a, nav a:hover {
 }
 
 #banner{
+    display: flex;
+    justify-content: center;
     background-image:url('../Imagens/moto.jpg');
     background-position: center;
     background-size: cover;
-    height: 1000px;
+    height: 690px;
 }
+
+.colunm{
+    flex-direction: column;
+}
+
+.banner_headline{
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   margin-bottom: 20%;
+}
+.banner_headline h1{
+    color: rgb(248, 241, 241);
+    font-size: 50px;
+    text-shadow: 0px 1px 0px rgb(228, 212, 212);
+    margin: 0;
+    padding: 0;
+    width: 300px;
+}
+
+.banner_headline h2{
+    color: white;
+    font-size: 25px;
+    text-shadow: 0px 1px 0px rgb(228, 212, 212);
+    margin: 0;
+    padding: 0;
+    width: 450px;
+    margin-top: 30px;
+}
+
+.banner_options{
+    height: 200px;
+    display: flex;
+}
+
+.banner1,.banner2,.banner3{
+    flex: 1;
+    padding: 20px;
+}
+
+.banner1,.banner2,.banner3, a{
+    color: aliceblue;
+}
+
+.banner1{
+    background-color: rgb(72, 188, 223);
+    background-image:url('../Imagens/banner.jpg');
+    height: 80%;
+    background-size: cover;
+    padding: 20px;
+        
+}
+.banner2{
+    background-color: rgb(31, 123, 151);
+    background-image:url('../Imagens/F1.jpg');
+    height: 80%;
+    background-size: cover;
+    padding: 20px;
+}
+.banner3{
+    background-color: rgb(33, 100, 121);
+    background-image:url('../Imagens/copa.webp');
+    height: 80%;
+    background-size: cover;
+    padding: 20px;
+}
+
+.banner-title{
+    color:white;
+}
+.banner-description1{
+    color: rgb(255, 255, 252);
+    font-size: 13px;
+    margin-top: 10px;
+    margin-bottom:20px;
+}
+.banner-description2{
+    color: rgb(240, 241, 247);
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom:20px;
+}
+.banner-description3{
+    color: rgb(255, 255, 252);
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom:20px;
+}
+
+.banner_options a{
+    display: inline-block;
+    border: 1px solid white;
+    padding: 5px;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+ 
