--- a/Sports/assets/css/template.css
+++ b/Sports/assets/css/template.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    padding-bottom: 300px;
 }
 header{
     display: flex;
@@ -151,5 +152,83 @@ nav .active a, nav a:hover {
     font-size: 15px;
     text-decoration: none;
 }
-
+#geral{
+    display: flex;
+    justify-content: center;
+}
  
+#geral section{
+    flex: 2;
+}
+
+#geral aside{
+    flex: 1;
+}
+.widget_title{
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.widget_title_text{
+    color: black;
+    font-size: 21px;
+    font-weight: bold;
+}
+.flex{
+    display: flex;
+    flex-wrap:wrap;
+}
+
+article{
+    flex: 1;
+    min-width: 300px;
+    margin-right: 20px;
+}
+
+.widget_title_bar{
+    width: 50px;
+    height: 3px;
+    background-color: blue;
+    margin-top: 10px;
+}
+
+article .news_data{
+    display: flex;
+}
+
+article .news_posted{
+    background-color: blue;
+    font-weight: bolder;
+    color: white;
+    font-size: 12px;
+    padding: 10px;
+}
+
+article .news_comments{
+    background-color: rgb(0, 149, 255);
+    font-weight: bolder;
+    color: white;
+    font-size: 12px;
+    padding: 10px;
+    margin-left: 2px;
+}
+article .news_thumbnail{
+    margin-top: 30px;
+}
+
+article .news_thumbnail img{
+    width: 100%;
+    height:auto;
+
+}
+article .news-title{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: black;
+    font-size: 25px;
+}
+article .news_resume{
+    color: black;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 30px;
+}
